--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -208,3 +208,21 @@
     </nb-card>
   </div>
 </div>
+
+
+<!-- <ngx-side-modal [(show)]='viewLoanModal' style="width: 500px;">
+  <div modal-header>Update Loan Request</div>
+  <div modal-body>
+
+  </div>
+
+  <div modal-actions class="d-flex mb-5">
+      <button nbButton status="primary" class="d-flex column">Submit</button>
+      <button nbButton outline status="primary" class="d-flex column">Discard</button>
+      <button class="d-flex column Attach">
+          <img class="icon" src="assets/icons/attach.jpg" style="height: 30px; margin-left: 20px;margin-right: 10px;">
+          Attach</button>
+
+  </div>
+  <div style="margin-top: 15px;"></div>
+</ngx-side-modal> -->
