--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -12,7 +12,6 @@
 
 </div>
 
-
 <div *ngIf="newPool == true">
   <nb-card>
     <nb-card-body>
@@ -31,6 +30,16 @@
           <label for="Description" class="col-sm-3 col-form-label mylabel">Description</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
               <ngx-wysisyg-input style="padding-left: -10px;" [(value)]="poolModel.description"></ngx-wysisyg-input>
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <label for="Description" class="col-sm-3 col-form-label mylabel">Competency</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <select class="form-control" name="eligibleGrades">
+                <option value="">--Select Comptency--</option>
+                <option value="1">Competency 1</option>
+              </select>
           </div>
         </div>
 
