Dashboard and Events Plugin

--- a/src/app/modules/self-service/modalform/modalform.component.html
+++ b/src/app/modules/self-service/modalform/modalform.component.html
@@ -1,6 +1,6 @@
 <form action="/action_page.php" #EventForm="ngForm" name="EventForm" id="EventForm">
     <h6 style="border: 10px  #CCC; background-color: #F5F5FA; font-size: small; padding: 15px; width: 300px;
-    margin-left: 10px;">create new events</h6>
+    margin-left: 10px;"></h6>
     <div style="margin: 20px;">
         <div class="form-group">
             <label for="title">title:</label>
