--- a/src/app/components/cal/cal.component.html
+++ b/src/app/components/cal/cal.component.html
@@ -1,17 +1,20 @@
 <div style="display: flex; flex-direction: row;flex-wrap: wrap;">
+    <div style="margin-right: 0.3rem; font-weight: bolder; font-size: larger;" >
+
+        {{monthLabel}} - {{year}}
+    </div>
+
     <div>
         <button (click)="prevMonth()">Prev</button><button (click)="nextMonth()">Next</button>
         <span> 
             <button (click)="gotoThisMonth()">Today</button></span>
     </div>
-    <div style="margin-left: 7rem; font-weight: bolder; font-size: larger;" >
-
-        {{monthLabel}} - {{year}}
-    </div>
-
+ 
 </div>
 
-
+<nb-card>
+    <nb-card-body>
+        
 <table style="padding: 2rem; margin-top: 2rem;  border-collapse: collapse;
 border-spacing: 0;
 font-size: 1em; " >
@@ -37,3 +40,5 @@ font-size: 1em; " >
         </tr>
     </tbody>
 </table>
+    </nb-card-body>
+</nb-card>
