--- a/src/app/modules/self-service/employeeevents/employeeevents.component.html
+++ b/src/app/modules/self-service/employeeevents/employeeevents.component.html
@@ -40,12 +40,12 @@
 
 
         <ngx-side-modal [(show)]='showEvent' style="width: 500px;">
-            <div modal-header>Create new Events</div>
+            <div modal-header style="font-size: larger; font-weight: bold;"    >Create new Events</div>
             <div modal-body>
 
                 <form action="/action_page.php" #EventForm="ngForm" name="EventForm" id="EventForm">
-                    <h6 style="border: 10px  #CCC; background-color: #F5F5FA; font-size: small; padding: 15px; width: 300px;
-                    margin-left: 10px;">create new events</h6>
+                    <!-- <h6 style="border: 10px  #CCC; background-color: #F5F5FA; font-size: small; padding: 15px; width: 300px;
+                    margin-left: 10px;">create new events</h6> -->
                     <div style="margin: 20px;">
                         <div class="form-group">
                             <label for="title">title:</label>
