--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
             </span>
           </div>
           <div style="padding:5px">
-            <!-- <span class="header5-bold">{{Dash.aggregateData.countDueForRetirement}}</span> -->
+            <span class="header5-bold">{{Dash.aggregateData.countDueForRetirement}}</span> 
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
             </span>
           </div>
           <div style="padding:5px">
-            <!-- <span class="header5-bold">{{Dash.aggregateData.dueForPromotion}}</span> -->
+            <span class="header5-bold">{{Dash.aggregateData.dueForPromotion}}</span> 
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             </span>
           </div>
           <div style="padding:5px">
-            <!-- <span class="header5-bold">{{Dash.aggregateData.dueForConfirmation}}</span> -->
+             <span class="header5-bold">{{Dash.aggregateData.dueForConfirmation}}</span> 
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
           <div *ngFor="let gender of  Gender">
             <nb-select selected="1">
               <nb-option value="1">{{gender.name}}</nb-option>
-              <nb-option value="2">{{gender.name}}</nb-option>
+              <nb-option value="2">{{gender.value}}</nb-option>
             </nb-select>
           </div>
         </div>
@@ -113,7 +113,7 @@
           <div *ngFor="let department of Department">
             <nb-select selected="1">
               <nb-option value="1">{{department.name}}</nb-option>
-              <nb-option value="2">{{department.name}}</nb-option>
+              <nb-option value="2">{{department.value}}</nb-option>
             </nb-select>
           </div>
         </div>
@@ -168,13 +168,14 @@
           </div>
         </div>
         <div style="height: 19.8rem;width: 100%;padding: 5px;">
-          <div class="card-body d-flex mt-2" style="display: flex; flex-direction: column;">
+          <div class="card-body d-flex mt-2" style="display: flex; flex-direction: column;" *ngFor="eve of Event">
+            
             <div style="display: flex; justify-content: space-between;">
               <div class="mt-2" *ngFor="let day_no of [0,1,2,3,4]">
                 <div class="pl-2 pr-2 pt-1 rounded-circle  text-dark"
-                  [class]="{'circle': weekdays[day_no].getDay() == today.getDay()}" style="padding: 2px;">
-                  <h6 style="font-size: xx-small;">{{weekdays[day_no] | date:"MMM"}}</h6>
-                  <span style="font-size: smaller;">{{weekdays[day_no] | date:"dd"}}</span>
+                  [class]="{'circle': eve[day_no].getDay() == today.getDay()}" style="padding: 2px;">
+                  <h6 style="font-size: xx-small;">{{eve[day_no] | date:"MMM"}}</h6>
+                  <span style="font-size: smaller;">{{eve[day_no] | date:"dd"}}</span>
                 </div>
 
                 <h6 style="font-weight: lighter; font-style: normal; font-size: 12px;" class="mt-3 pl-1">
@@ -183,7 +184,7 @@
             </div>
 
             <div class="zee">
-              <div class="card-body" *ngFor="let i of [0,1,2,3,4,5,6,7,8]">
+              <div class="card-body" * ngFor="let i of [0,1,2,3,4,5,6,7,8]">
                 <h4 class="card-title" style="font-size: small;">Workshop</h4>
                 <p class="card-text" style="color: #F2994A;">Managing employeed</p>
                 <p class="card-text">11am - 12pm</p>
@@ -208,7 +209,7 @@
           <div *ngFor="let retention of Retention">
             <nb-select selected="1">
               <nb-option value="1">{{retention.name}}</nb-option>
-              <nb-option value="2">{{retention.name}}</nb-option>
+              <nb-option value="2">{{retention.value}}</nb-option>
             </nb-select>
           </div>
         </div>
