--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
             </span>
           </div>
           <div style="padding:5px">
-            <span class="header5-bold">{{Dash.aggregateData.countDueForRetirement}}</span> 
+            <span class="header5-bold">{{Dash.aggregateData?.countDueForRetirement}}</span> 
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
             </span>
           </div>
           <div style="padding:5px">
-            <span class="header5-bold">{{Dash.aggregateData.dueForPromotion}}</span> 
+            <span class="header5-bold">{{Dash.aggregateData?.dueForPromotion}}</span> 
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             </span>
           </div>
           <div style="padding:5px">
-             <span class="header5-bold">{{Dash.aggregateData.dueForConfirmation}}</span> 
+             <span class="header5-bold">{{Dash.aggregateData?.dueForConfirmation}}</span> 
           </div>
         </div>
       </div>
