--- a/src/app/components/radio-button/radio-button.component.html
+++ b/src/app/components/radio-button/radio-button.component.html
@@ -7,7 +7,7 @@
     <span class="checkmark"></span>
     <div style="padding: 2px"></div>
     <label class="form-check-label" style="font-size: 15px;">
-      {{item.selectLabel}}
+      {{item.selectLabel}}-{{item.selectValue}}
     </label>
 
   </div>
