--- a/src/app/modules/asset-management/pages/asset-category/asset-category.component.html
+++ b/src/app/modules/asset-management/pages/asset-category/asset-category.component.html
@@ -13,6 +13,6 @@
   [formTitle]="getFormTitle()"
   [emptyConfig]="emptyConfig"
   [loading]="loading"
-  [tableActions]="getTableActions()"
+  [tableActions]="tableActions"
   (tableActionClicked)="tableActionClick($event)"
 ></ngx-page>
