--- a/src/app/modules/performance/page/assign-kra/assign-kra.component.html
+++ b/src/app/modules/performance/page/assign-kra/assign-kra.component.html
@@ -12,11 +12,11 @@
         </div> -->
         <div class="form-group">
             <label>Reviewer</label>
-            <ngx-employee-master-search></ngx-employee-master-search>
+            <ngx-employee-master-search [(value)]="reviewer"></ngx-employee-master-search>
         </div>
         <div class="form-group">
             <label>Employee</label>
-            <ngx-employee-master-search></ngx-employee-master-search>
+            <ngx-employee-master-search [(value)]="employees"></ngx-employee-master-search>
         </div>
         <div class="form-group">
             <label></label>
