--- a/src/app/modules/communication/page/templates/templates.component.html
+++ b/src/app/modules/communication/page/templates/templates.component.html
@@ -5,17 +5,22 @@
 >
 </ngx-componentsheader>
 <div class="row" style="margin-left: -25px; margin-right: -25px;">
+  <div class="center" *ngIf="loading">
+    <i class="fa fa-spin fa-spinner fa-4x"></i>&nbsp; Loading...
+  </div>
+  <ng-template [ngIf]="!loading">
   <div
-    *ngFor="let n of [1, 2, 2, 3, 3, 5, 4, 44, 5, 6]"
+    *ngFor="let template of templates"
     class="col-md-3 col-sm-4"
   >
     <div class="card black" style="padding: 30px; margin: 10px; background-color: white">
       <div class="control" style="background-color: #3AF28614; width: max-content; padding: 10px; border-radius: 1px;">
         <nb-icon icon="file-text-outline"status='success'></nb-icon>
       </div>
-      <div style="padding: 5px;" class="header6-medium">Deployment</div>
+      <div style="padding: 5px;" class="header6-medium">{{template.subject}}</div>
     </div>
   </div>
+  </ng-template>
 </div>
 
 
@@ -24,19 +29,21 @@
     <div modal-body>
         <div class="form-group">
             <label>Template</label>
-            <input class="form-control"/>
+            <select class="form-control" [(ngModel)]="editingData.templateType">
+              <option [value]="type.id" *ngFor="let type of templateTypes">{{type.text}}</option>
+            </select>
         </div>
         <div class="form-group">
             <label>Subject</label>
-            <input class="form-control"/>
+            <input class="form-control" [(ngModel)]="editingData.subject"/>
         </div>
         <div class="form-group">
             <label>Email Body</label>
-            <ngx-wysisyg-input></ngx-wysisyg-input>
+            <ngx-wysisyg-input [(value)]="editingData.body"></ngx-wysisyg-input>
         </div>
     </div>
     <div modal-actions>
-        <button nbButton status="primary">Create Template</button>
+        <button nbButton status="primary" (click)="createTemplate()">Create Template</button>
         <button nbButton outline status="primary">Discard</button>
     </div>
 </ngx-side-modal>
