--- a/src/app/modules/communication/page/settings/settings.component.html
+++ b/src/app/modules/communication/page/settings/settings.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<ngx-side-modal>
+<ngx-side-modal [(show)]="showModal">
   <div class="form-group">
     <label>Username</label>
     <input class="form-control" />
