--- a/src/app/components/tablecomponent/tablecomponent.component.html
+++ b/src/app/components/tablecomponent/tablecomponent.component.html
@@ -27,6 +27,7 @@
                 style="background-color: transparent; border: none; text-decoration: underline; padding: 0%; min-width: unset !important;"
                 (click)='customActionClicked(col, data)'>{{ col.link_name }}</button>
             </span>
+            <ng-content *ngIf="col.type === COLUMN_TYPES.Object" select="[tableObject]"> </ng-content>
           </td>
           <td *ngIf="showActions">
             <ng-template #card>
